--- a/index.html
+++ b/index.html
@@ -488,9 +488,7 @@
         <h3>What areas do you cover?</h3>
         <p>We primarily cover The Neighbourhood Estate and occasionally other areas.</p>
         <h3>How do I book a service?</h3>
-        <p>You can book directly through our website using the booking form.</p>
-        <h3>Are you insured?</h3>
-        <p>Yes, we are fully insured for all pet services we provide.</p>
+        <p>Please contact us through our whatsapp or email!</p>
     </section>
 
     <footer>
