--- a/index.html
+++ b/index.html
@@ -4,373 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Walkr - Dog Walking & House Sitting</title>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f8ff;
-            color: #333;
-        }
-
-        header {
-            background-color: #4caf50;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            background-color: #333;
-            margin: 0;
-        }
-
-        nav ul li {
-            margin: 0 15px;
-        }
-
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            padding: 14px 20px;
-            display: block;
-            transition: background-color 0.3s ease;
-        }
-
-        nav ul li a:hover {
-            background-color: #4caf50;
-            border-radius: 5px;
-        }
-
-        section {
-            padding: 40px;
-            max-width: 1000px;
-            margin: auto;
-            line-height: 1.8;
-        }
-
-        #about img, #gallery img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin: 20px auto;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        form {
-            background-color: #f9f9f9;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
-        }
-
-        form label {
-            display: block;
-            margin: 15px 0 5px;
-            font-weight: bold;
-        }
-
-        form input, form select, form textarea {
-            width: 100%;
-            padding: 12px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 6px;
-            box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-        }
-
-        form button {
-            background-color: #4caf50;
-            color: white;
-            border: none;
-            padding: 12px 30px;
-            cursor: pointer;
-            border-radius: 6px;
-            font-size: 1em;
-            transition: background-color 0.3s ease;
-        }
-
-        form button:hover {
-            background-color: #45a049;
-        }
-
-        #home {
-            background-color: #e0f7e9;
-            padding: 60px 40px;
-            text-align: center;
-            border-radius: 16px;
-            box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
-            margin-bottom: 50px;
-        }
-
-        #home h2 {
-            font-size: 3em;
-            color: #4caf50;
-            margin-bottom: 20px;
-        }
-
-        #home p {
-            font-size: 1.5em;
-            color: #555;
-            line-height: 1.8;
-        }
-
-        #about {
-            background-color: #ffffff;
-            padding: 60px 40px;
-            border-radius: 16px;
-            box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
-            margin-bottom: 50px;
-        }
-
-        #about h2 {
-            font-size: 2.5em;
-            color: #4caf50;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        #about p {
-            font-size: 1.3em;
-            color: #555;
-            text-align: center;
-            margin-bottom: 30px;
-            line-height: 1.8;
-        }
-
-        #about blockquote {
-            font-style: italic;
-            color: #333;
-            border-left: 4px solid #4caf50;
-            padding-left: 20px;
-            margin: 30px auto;
-            max-width: 800px;
-            text-align: left;
-        }
-
-        #services {
-            background-color: #f9f9f9;
-            padding: 60px 40px;
-            border-radius: 16px;
-            box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
-            margin-bottom: 50px;
-            text-align: center;
-        }
-
-        #services h2 {
-            font-size: 2.5em;
-            color: #4caf50;
-            margin-bottom: 30px;
-        }
-
-        #services ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-        }
-
-        #services ul li {
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            width: 220px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        #services ul li:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
-        }
-
-        #services ul li h3 {
-            font-size: 1.5em;
-            color: #4caf50;
-            margin-bottom: 10px;
-        }
-
-        #services ul li p {
-            font-size: 1em;
-            color: #555;
-        }
-
-        #testimonials {
-            background-color: #f9f9f9;
-            padding: 50px;
-            border-radius: 16px;
-            box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
-            margin-bottom: 50px;
-        }
-
-        #testimonials h2 {
-            text-align: center;
-            color: #4caf50;
-            font-size: 2.5em;
-            margin-bottom: 30px;
-        }
-
-        .testimonial {
-            background-color: #ffffff;
-            padding: 40px;
-            border-radius: 16px;
-            margin: 30px 0;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            position: relative;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .testimonial:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
-        }
-
-        .testimonial::before {
-            content: "\201C";
-            font-size: 4em;
-            color: #4caf50;
-            position: absolute;
-            top: -30px;
-            left: 20px;
-        }
-
-        .testimonial p {
-            margin: 0;
-            font-style: italic;
-            font-size: 1.2em;
-            color: #555;
-        }
-
-        .testimonial span {
-            display: block;
-            margin-top: 20px;
-            font-weight: bold;
-            text-align: right;
-            color: #333;
-        }
-
-        .stars {
-            color: #ffd700;
-            font-size: 1.5em;
-            margin-bottom: 15px;
-        }
-
-        .contact-info {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .contact-info a {
-            display: flex;
-            align-items: center;
-            padding: 15px;
-            border-radius: 8px;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 1.2em;
-            color: #333;
-            transition: background-color 0.3s ease, color 0.3s ease;
-            width: 300px;
-            justify-content: center;
-        }
-
-        .contact-info a.whatsapp {
-            background-color: #a1cda8;
-            color: #1c5d21;
-        }
-
-        .contact-info a.whatsapp:hover {
-            background-color: #8ebd96;
-            color: #0d3d13;
-        }
-
-        .contact-info a.email {
-            background-color: #f4f4f4;
-            color: #333;
-        }
-
-        .contact-info a.email:hover {
-            background-color: #e0e0e0;
-            color: #000;
-        }
-
-        .contact-info img {
-            margin-right: 10px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 30px;
-            background-color: #333;
-            color: #fff;
-            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        footer ul {
-            list-style-type: none;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            margin: 20px 0 0;
-        }
-
-        footer ul li {
-            margin: 0 15px;
-        }
-
-        footer ul li a {
-            color: white;
-            text-decoration: none;
-            font-size: 1.2em;
-            transition: color 0.3s ease;
-        }
-
-        footer ul li a:hover {
-            color: #4caf50;
-            text-decoration: underline;
-        }
-    </style>
-    <script>
-        window.addEventListener("DOMContentLoaded", function() {
-            const form = document.querySelector("#booking form");
-            form.addEventListener("submit", async function(event) {
-                event.preventDefault();
-                const formData = new FormData(form);
-                const response = await fetch("https://formspree.io/f/your-form-id", {
-                    method: "POST",
-                    body: formData,
-                    headers: {
-                        'Accept': 'application/json'
-                    }
-                });
-                if (response.ok) {
-                    alert("Thank you for your booking request! We will get back to you soon.");
-                    form.reset();
-                } else {
-                    alert("Oops! There was a problem submitting your form. Please try again later.");
-                }
-            });
-        });
-    </script>
+    <link rel="stylesheet" href="./Styles/styles.css">
 </head>
 <body>
     <header>
         <h1>Walkr</h1>
     </header>
-
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
@@ -383,7 +22,6 @@
             <li><a href="#faq">FAQ</a></li>
         </ul>
     </nav>
-
     <section id="home">
         <p>We offer professional dog walking and house-sitting services in The Neighborhood Estate. Going away or just need a helping hand? We would love to help and be there for your pets!</p>
     </section>
