--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="about">
         <h2>About Us</h2>
         <p>My name is Chris. I am a third year student at Wits University. With years of experience in dog walking and house-sitting, I treat each pet as if they were my own.</p>
-        <img src="DSC02398.jpg">
+        <img src="./images/DSC02457.jpg">
         <blockquote>"Chris was amazing with our dog Hunter! Highly recommend." - Riaska Geness</blockquote>
     </section>
 
@@ -92,10 +92,10 @@
         <h2>Contact Us</h2>
         <div class="contact-info">
             <a href="https://wa.me/27767944736" target="_blank" class="whatsapp">
-                <img src="whatsapp-icon.png" alt="WhatsApp" width="24" height="24"> 076 794 4736
+                <img src="./images/whatsapp-icon.png" alt="WhatsApp" width="24" height="24"> 076 794 4736
             </a>
             <a href="mailto:chris@walkr.co.za" class="email">
-                <img src="email-icon.png" alt="Email" width="24" height="24"> chris@walkr.co.za
+                <img src="./images/Email-icon.png" alt="Email" width="24" height="24"> chris@walkr.co.za
             </a>
         </div>
         <form action="/submit-inquiry" method="post">
@@ -114,11 +114,11 @@
 
     <section id="gallery">
         <h2>Gallery</h2>
-        <img src="DSC02256.jpg">
-        <img src="DSC02313.jpg">
-        <img src="DSC02365.jpg">
-        <img src="DSC02457.jpg">
-        <img src="DSC02470.jpg">
+        <img src="./images/DSC02313.jpg">
+        <img src="./images/DSC02470.jpg">
+        <img src="./images/DSC02256.jpg">
+        <img src="./images/DSC02365.jpg">
+        <img src="./images/DSC02398.jpg">
     </section>
 
     <section id="faq">
