--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="about">
         <h2>About Us</h2>
         <p>My name is Chris. I am a third year student at Wits University. With years of experience in dog walking and house-sitting, I treat each pet as if they were my own.</p>
-        <img src="./images/DSC02457.jpg">
+        <img src="./images/DSC02457.png">
         <blockquote>"Chris was amazing with our dog Hunter! Highly recommend." - Riaska Geness</blockquote>
     </section>
 
@@ -114,11 +114,11 @@
 
     <section id="gallery">
         <h2>Gallery</h2>
-        <img src="./images/DSC02313.jpg">
-        <img src="./images/DSC02470.jpg">
-        <img src="./images/DSC02256.jpg">
-        <img src="./images/DSC02365.jpg">
-        <img src="./images/DSC02398.jpg">
+        <img src="./images/DSC02313.png">
+        <img src="./images/DSC02470.png">
+        <img src="./images/DSC02256.png">
+        <img src="./images/DSC02365.png">
+        <img src="./images/DSC02398.png">
     </section>
 
     <section id="faq">
