--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
     </header>
     
     <nav>
-        <div class="hamburger" onclick="toggleMenu()">
-            <i class="fas fa-bars"></i>
-        </div>
         <ul id="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Us</a></li>
@@ -39,7 +36,6 @@
         <section id="home">
             <h2>Welcome to Walkr</h2>
             <p>We offer professional dog walking and house-sitting services in The Neighborhood Estate. Whether you're going away or just need a helping hand, we're here to ensure your pets are happy and well-cared for!</p>
-            <a href="#contact" class="cta-button">Get Started</a>
         </section>
 
         <section id="about">
@@ -77,18 +73,22 @@
         <section id="testimonials">
             <h2>Testimonials</h2>
             <div class="testimonial">
-                <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                <div class="stars">
+                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
                 <p>"Christopher has been walking my dogs for a while now and is a very compassionate and patient person. The dogs love him! He is a great dog walker, very reliable and is highly recommended."</p>
                 <span>- Sheena Geness</span>
             </div>
             <div class="testimonial">
-                <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                <div class="stars">
+                    <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                </div>
                 <p>"Thank you to Christopher who house sat and looked after my two dogs. Fabulous services, dogs were happy and calm. The house was perfect. I can highly recommend Christopher!"</p>
                 <span>- Glenda Dewey</span>
             </div>
         </section>
 
-        <section id="contact">
+        <section id="contact" class="contact-box">
             <h2>Contact Us</h2>
             <div class="contact-info">
                 <a href="https://wa.me/27767944736" target="_blank" class="whatsapp">
@@ -112,7 +112,7 @@
             </form>
         </section>
 
-        <section id="gallery">
+        <section id="gallery" class="gallery-box">
             <h2>Gallery</h2>
             <div class="gallery-container">
                 <div class="gallery-item">
@@ -134,7 +134,7 @@
             </div>
         </section>
 
-        <section id="faq">
+        <section id="faq" class="faq-box">
             <h2>Frequently Asked Questions</h2>
             <div class="faq-item">
                 <h3>What areas do you cover?</h3>
@@ -158,18 +158,7 @@
 
     <!-- JavaScript for Hamburger Menu -->
     <script>
-        function toggleMenu() {
-            const navLinks = document.getElementById('nav-links');
-            navLinks.classList.toggle('active');
-        }
-
-        // Close the menu when clicking outside
-        window.addEventListener('click', function(event) {
-            const nav = document.querySelector('nav');
-            if (!nav.contains(event.target) && nav.querySelector('#nav-links').classList.contains('active')) {
-                nav.querySelector('#nav-links').classList.remove('active');
-            }
-        });
+        // Since we are removing the hamburger menu, this script can be removed or left as is
     </script>
 </body>
 </html>
