--- a/index.html
+++ b/index.html
@@ -116,19 +116,19 @@
             <h2>Gallery</h2>
             <div class="gallery-container">
                 <div class="gallery-item">
-                    <img src="./images/DSC02313.png" alt="Dog playing in the park">
+                    <img src="./images/DSC02313.png" alt="Dog playing in the park" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="./images/DSC02470.png" alt="House sitting service">
+                    <img src="./images/DSC02470.png" alt="House sitting service" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="./images/DSC02256.png" alt="Walking in the neighborhood">
+                    <img src="./images/DSC02256.png" alt="Walking in the neighborhood" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="./images/DSC02365.png" alt="Happy pet at home">
+                    <img src="./images/DSC02365.png" alt="Happy pet at home" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="./images/DSC02398.png" alt="Dog enjoying a walk">
+                    <img src="./images/DSC02398.png" alt="Dog enjoying a walk" loading="lazy">
                 </div>
                 <!-- Add more images as needed -->
             </div>
@@ -156,9 +156,9 @@
         </ul>
     </footer>
 
-    <!-- JavaScript for Hamburger Menu -->
+    <!-- JavaScript for Navigation Bar (Removed Hamburger Menu) -->
     <script>
-        // Since we are removing the hamburger menu, this script can be removed or left as is
+        // No JavaScript needed since the hamburger menu has been removed
     </script>
 </body>
 </html>
